# patchelf-rs

./: .gitignore  Cargo.toml  Readme.md  build.rs  ffi.cc
examples/: printso.rs  setso.rs
src/: lib.rs
