[package]
name = "patchelf"
version = "0.1.0"
edition = "2021"
authors = ["spinpx"]
repository = "https://github.com/FuzzAnything/patchelf-rs"
description = "patchelf rust bindings"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"

[[example]]
name = "setso"

[[example]]
name = "printso"