[package]
name = "patchelf"
version = "0.2.1"
edition = "2021"
authors = ["spinpx"]
repository = "https://github.com/spinpx/patchelf-rs"
description = "patchelf rust bindings"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"

[[example]]
name = "setso"

[[example]]
name = "printso"
